[package]
name = "rproxy"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
log = "0.4.22"
env_logger = "0.11.6"
toml = "0.8.19"
port_check = "0.2.1"
serde_json = "1.0.134"
serde = { version = "1.0.217", features = ["derive"] }
